Changes to show page and home controller to fix issue of batch lists not showing

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -231,3 +231,7 @@ hr {
 #error_explanation {
   color: #BF0711;
 }
+
+.current-batch {
+  width: 100%;
+}
